@@ -6,6 +6,7 @@ TRUNK
 - Issue 27: [SiteMap] Unnecessary String concatenations when logging + in SiteMapURL.toString() (jnioche)
 - Issue 26: [SiteMap] Set correct default priority for URL in a sitemap file (jnioche)
 - Issue 25: [Robots] Robots parser should not lowercase sitemap URLs (jnioche)
+- Issue 29: [SiteMap] try urls when <loc> element is missing (jnioche)
 
 Release 0.2
 - Move to pure Maven for CC build lifecycle (lewismc)
